# alisql

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml  test.yml
src/: lib.rs  main.rs  sample.sql  sql_analyzer.rs
src/sample_sqls/: sample2.sql
src/sample_sqls/level1/: sample.sql
src/sql_analyzer/: analyzer.rs  graph.rs
