[package]
name = "alisql"
version = "0.1.4"
authors= ["yujikawa"]
description = "Analyze SQL"
license = "Apache-2.0"
edition = "2021"
exclude = [".github"]
repository = "https://github.com/yujikawa/alisql"

[lib]
name = "alisql"
crate-type = ["cdylib", "rlib"]

[dependencies]
minijinja = "0.23.0"
regex = "1.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.3.2"
